fixed z-index of map buttons

--- a/client/src/style/css/Map.css
+++ b/client/src/style/css/Map.css
@@ -53,12 +53,20 @@
     border-radius: 50%;
     width: 12vw;
     height: 12vw;
+}
+
+.homeButton > div {
     z-index: 1;
 }
 
 .homeButton > div > svg {
     width: 10vw;
     height: 10vw;
+}
+
+
+.shuffleArtistButton {
+    z-index: 1;
 }
 
 .shuffleArtistButton > div {
@@ -72,12 +80,16 @@
     border-radius: 50%;
     width: 15vw;
     height: 15vw;
-    z-index: 1;
 }
 
 .shuffleArtistButton > div > svg {
     width: 12vw;
     height: 12vw;
+}
+
+
+.closeConnectionsButton {
+    z-index: 1;
 }
 
 .closeConnectionsButton > div {  
@@ -99,6 +111,11 @@
     height: 12vw;
 }
 
+
+.openFilterMenuButton {
+    z-index: 1;
+}
+
 .openFilterMenuButton > div {
     margin-bottom: 65vh;
     margin-right: 25vw;
@@ -110,7 +127,6 @@
     border-radius: 50%;
     width: 15vw;
     height: 15vw;
-    z-index: 1;
 }
 
 .openFilterMenuButton > div > svg {
